// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentRow component > should align center 1`] = `
<div>
  <div
    class="w-100 d-flex flex-row justify-content-center align-items-center mt-lg-3 mb-3"
  />
</div>
`;

exports[`ContentRow component > should align left 1`] = `
<div>
  <div
    class="w-100 mt-lg-3 mb-3"
  />
</div>
`;

exports[`ContentRow component > should always render child elements 1`] = `
<div>
  <div
    class="w-100 mt-lg-3 mb-3"
  >
    child
  </div>
</div>
`;
